tests/ui/extend/extend_no_attr.stderr
error: Expected `extend` attribute on struct or one field
 --> tests/ui/extend/extend_no_attr.rs:4:1
  |
4 | struct NamedMulti {
  | ^^^^^^

error: Expected `extend` attribute on struct or one field
  --> tests/ui/extend/extend_no_attr.rs:10:1
   |
10 | struct NamedSingle {
   | ^^^^^^

error: Expected `extend` attribute on struct or one field
  --> tests/ui/extend/extend_no_attr.rs:15:1
   |
15 | struct UnnamedMulti(Vec<usize>, bool);
   | ^^^^^^

error: Expected `extend` attribute on struct or one field
  --> tests/ui/extend/extend_no_attr.rs:18:1
   |
18 | struct UnnamedSingle(Vec<usize>);
   | ^^^^^^

error: Struct has no fields
  --> tests/ui/extend/extend_no_attr.rs:21:1
   |
21 | struct Unit;
   | ^^^^^^
